--- a/index.html
+++ b/index.html
@@ -4,31 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reflection Removal</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Reflection Removal</h1>
-    </header>
-    <main>
-        <section class="upload-section">
-            <h2>Upload Your Image or Video</h2>
-            <form id="upload-form" action="/process" method="post" enctype="multipart/form-data">
-                <label for="file-input">Choose a file:</label>
-                <input type="file" id="file-input" name="file" accept="image/*,video/*" required>
-                <button type="submit">Process</button>
-            </form>
-        </section>
-        <section class="output-section" id="output-section" style="display: none;">
-            <h2>Processed Output</h2>
-            <div id="output-container">
-                <!-- Results will be dynamically inserted here -->
-            </div>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Reflection Removal Project</p>
-    </footer>
-    <script src="script.js"></script>
+    <h1>Upload Image for Reflection Removal</h1>
+    <input type="file" id="image-upload" accept="image/*">
+    <button onclick="processImage()">Upload and Process Image</button>
+    
+    <h2>Processed Image:</h2>
+    <img id="processed-image" src="" alt="Processed Image" style="max-width: 100%; display: none;">
+    
+    <script>
+        function processImage() {
+            const fileInput = document.getElementById('image-upload');
+            const file = fileInput.files[0];
+
+            if (!file) {
+                alert('Please select an image');
+                return;
+            }
+
+            const formData = new FormData();
+            formData.append("file", file);
+
+            fetch('http://127.0.0.1:5000/process', {
+                method: 'POST',
+                body: formData
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.message === 'Image processed successfully') {
+                    // Assuming you return the image URL or base64-encoded image from backend
+                    const processedImageSrc = 'data:image/jpeg;base64,' + data.image_data; 
+                    document.getElementById('processed-image').src = processedImageSrc;
+                    document.getElementById('processed-image').style.display = 'block';
+                }
+            })
+            .catch(error => {
+                console.error('Error processing image:', error);
+            });
+        }
+    </script>
 </body>
 </html>
