--- a/website/index.html
+++ b/website/index.html
@@ -6,46 +6,29 @@
     <title>Reflection Removal</title>
 </head>
 <body>
-    <h1>Upload Image for Reflection Removal</h1>
+    <h1>Reflection Removal Interface</h1>
+
+    <!-- Image Processing -->
+    <h2>Image Upload:</h2>
     <input type="file" id="image-upload" accept="image/*">
     <button onclick="processImage()">Upload and Process Image</button>
-    
-    <h2>Processed Image:</h2>
-    <img id="processed-image" src="" alt="Processed Image" style="max-width: 100%; display: none;">
-    
-    <script>
-        function processImage() {
-            const fileInput = document.getElementById('image-upload');
-            const file = fileInput.files[0];
+    <h3>Processed Image:</h3>
+    <img id="processed-image" style="display: none; max-width: 100%;">
 
-            if (!file) {
-                alert('Please select an image');
-                return;
-            }
+    <!-- Video Processing -->
+    <h2>Video Upload:</h2>
+    <input type="file" id="video-upload" accept="video/*">
+    <button onclick="processVideo()">Upload and Process Video</button>
+    <h3>Processed Video:</h3>
+    <p>Processed video will be displayed on the server via Matplotlib.</p>
 
-            const formData = new FormData();
-            formData.append("file", file);
+    <!-- Real-Time Processing -->
+    <h2>Real-Time Video:</h2>
+    <button onclick="startRealTimeVideo()">Start Real-Time Video</button>
+    <button onclick="stopRealTimeVideo()">Stop Real-Time Video</button>
+    <h3>Real-Time Video Feed:</h3>
+    <img id="live-video" alt="Real-Time Video Feed" style="display: none; max-width: 100%;">
 
-            fetch('http://127.0.0.1:5000/process', {
-                method: 'POST',
-                body: formData
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.message === 'Image processed successfully') {
-                    // Assuming the server returns base64-encoded image data
-                    const processedImageSrc = 'data:image/jpeg;base64,' + data.image_data; 
-                    document.getElementById('processed-image').src = processedImageSrc;
-                    document.getElementById('processed-image').style.display = 'block';
-                } else {
-                    alert('Error processing image');
-                }
-            })
-            .catch(error => {
-                console.error('Error processing image:', error);
-                alert('Error processing image');
-            });
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
